--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Engine\Core\HUD\Widgets\ContentBrowser.cpp" />
     <ClCompile Include="Engine\Core\Camera\Camera.cpp" />
     <ClCompile Include="Engine\Core\Camera\CameraController.cpp" />
     <ClCompile Include="Engine\Core\Delegates.cpp" />
@@ -147,6 +148,7 @@
     <ClCompile Include="Engine\Components\GameComponent.cpp" />
     <ClCompile Include="Engine\Core\Graphics\Buffer.cpp" />
     <ClCompile Include="Engine\Core\Graphics\Shader.cpp" />
+    <ClCompile Include="Engine\Core\HUD\Widget.cpp" />
     <ClCompile Include="Engine\Core\Rendering\GBuffer.cpp" />
     <ClCompile Include="Engine\Core\WinInput.cpp" />
     <ClCompile Include="Engine\DirectXSDK\ImGui\imgui.cpp" />
@@ -166,10 +168,13 @@
     <ClCompile Include="Engine\Systems\RenderSystem\RenderSystem.cpp" />
     <ClCompile Include="Engine\Components\LightComponent.cpp" />
     <ClCompile Include="Engine\Core\HUD\Hud.cpp" />
-    <ClCompile Include="Engine\Core\HUD\Widget.cpp" />
     <ClCompile Include="Engine\Core\HUD\Widgets\ViewportWidget.cpp" />
+    <ClCompile Include="Engine\Core\Rendering\RenderTarget.cpp" />
+    <ClCompile Include="Engine\Core\HUD\Widgets\HierarchyWidget.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\Downloads\stb_image.h" />
+    <ClInclude Include="Engine\Core\HUD\Widgets\ContentBrowser.h" />
     <ClInclude Include="Engine\Core\Camera\Camera.h" />
     <ClInclude Include="Engine\Core\Camera\CameraController.h" />
     <ClInclude Include="Engine\Core\DisplayWin32.h" />
@@ -205,6 +210,8 @@
     <ClInclude Include="Engine\Core\HUD\Hud.h" />
     <ClInclude Include="Engine\Core\HUD\Widget.h" />
     <ClInclude Include="Engine\Core\HUD\Widgets\ViewportWidget.h" />
+    <ClInclude Include="Engine\Core\Rendering\RenderTarget.h" />
+    <ClInclude Include="Engine\Core\HUD\Widgets\HierarchyWidget.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\Core\Rendering\Shaders\LightShader.hlsl">
