--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -1,24 +1,79 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=57,43
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
+Pos=937,0
+Size=343,720
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][DockSpace Demo]
 Pos=0,19
 Size=1280,701
 Collapsed=0
-DockId=0x3BC79352,0
 
-[Window][DockSpace Demo]
+[Window][Viewport]
+Pos=278,0
+Size=657,515
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Hierarchy]
+Pos=0,0
+Size=276,515
+Collapsed=0
+DockId=0x00000001,0
+
+[Window][Example: Custom rendering]
+ViewportPos=348,374
+ViewportId=0x3AC84485
+Size=485,414
+Collapsed=0
+
+[Window][DockSpaceViewport_11111111]
+Pos=0,0
 Size=1280,720
 Collapsed=0
 
-[Window][Viewport]
-ViewportPos=422,411
-ViewportId=0x995B0CF8
-Size=279,194
+[Window][Title bar Hovered/Active tests]
+Pos=165,70
+Size=472,61
 Collapsed=0
 
+[Window][Content Browser]
+Pos=0,517
+Size=935,203
+Collapsed=0
+DockId=0x00000004,0
+
+[Table][0xC9935533,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x47600645,3]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Weight=1.0000
+
+[Table][0xDE6957FF,6]
+RefScale=13
+Column 0  Width=63
+Column 1  Width=63
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
 [Docking][Data]
-DockSpace ID=0x3BC79352 Pos=208,215 Size=1280,701 CentralNode=1 Selected=0xE87781F4
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=208,196 Size=1280,720 Split=X
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=935,720 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,515 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=276,720 Selected=0x29EABFBD
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=657,720 CentralNode=1 Selected=0x13926F0B
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,203 Selected=0xBF096F38
+  DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=343,720 Selected=0xE87781F4
 
