--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1027,0
-Size=253,720
+Pos=1029,0
+Size=251,720
 Collapsed=0
 DockId=0x00000006,0
 
@@ -15,16 +15,16 @@ Size=1280,701
 Collapsed=0
 
 [Window][Viewport]
-Pos=183,0
-Size=842,494
+Pos=228,0
+Size=799,544
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000003,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=181,494
+Size=226,386
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000007,0
 
 [Window][Example: Custom rendering]
 ViewportPos=348,374
@@ -43,10 +43,16 @@ Size=472,61
 Collapsed=0
 
 [Window][Content Browser]
-Pos=0,496
-Size=1025,224
+Pos=228,546
+Size=799,174
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000009,0
+
+[Window][Properties]
+Pos=0,388
+Size=226,332
+Collapsed=0
+DockId=0x00000008,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -70,10 +76,12 @@ Column 5  Weight=-1.0000
 
 [Docking][Data]
 DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=208,196 Size=1280,720 Split=X
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=1025,720 Split=Y
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,494 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=181,720 Selected=0x29EABFBD
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=842,720 CentralNode=1 Selected=0x13926F0B
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,224 Selected=0xBF096F38
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=253,720 Selected=0xE87781F4
+  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=1027,720 Split=X
+    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=226,720 Split=Y Selected=0x29EABFBD
+      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=199,386 Selected=0x29EABFBD
+      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=199,332 Selected=0x199AB496
+    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=799,720 Split=Y Selected=0x13926F0B
+      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=826,544 CentralNode=1 Selected=0x13926F0B
+      DockNode  ID=0x00000009 Parent=0x00000002 SizeRef=826,174 Selected=0xBF096F38
+  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=251,720 Selected=0xE87781F4
 
