--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(SolutionDir)GameEngine\vendor\assimp\include;$(SolutionDir)GameEngine\Engine\DirectXSDK\assimp;$(SolutionDir)GameEngine\vendor\ImGui;$(SolutionDir)GameEngine\Engine\DirectXSDK;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)GameEngine\vendor\DirectXTK\Inc;$(SolutionDir)GameEngine\vendor\assimp\include;$(SolutionDir)GameEngine\Engine\DirectXSDK\assimp;$(SolutionDir)GameEngine\vendor\ImGui;$(SolutionDir)GameEngine\Engine\DirectXSDK;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)GameEngine\Engine\Libs\x64\Debug;$(LibraryPath)</LibraryPath>
     <OutDir>$(SolutionDir)\GameEngine\</OutDir>
   </PropertyGroup>
@@ -167,6 +167,8 @@
     <ClCompile Include="Engine\Tools\ImageLoader.cpp" />
     <ClCompile Include="Engine\Components\ParticleComponent.cpp" />
     <ClCompile Include="Engine\Components\Particle.cpp" />
+    <ClCompile Include="Engine\Systems\TransformSystem.cpp" />
+    <ClCompile Include="Engine\Systems\TransformHelper.cpp" />
     <ClCompile Include="vendor\Delegates.cpp" />
     <ClCompile Include="vendor\ImGuizmo\GraphEditor.cpp" />
     <ClCompile Include="vendor\ImGuizmo\ImCurveEdit.cpp" />
@@ -217,17 +219,11 @@
     <ClInclude Include="Engine\Tools\ImageLoader.h" />
     <ClInclude Include="Engine\Components\ParticleComponent.h" />
     <ClInclude Include="Engine\Components\Particle.h" />
-    <ClInclude Include="vendor\Audio.h" />
-    <ClInclude Include="vendor\BufferHelpers.h" />
-    <ClInclude Include="vendor\CommonStates.h" />
-    <ClInclude Include="vendor\DDSTextureLoader.h" />
+    <ClInclude Include="Engine\Systems\ISystem.h" />
+    <ClInclude Include="Engine\Systems\TransformSystem.h" />
+    <ClInclude Include="Engine\Systems\TransformHelper.h" />
     <ClInclude Include="vendor\Delegates.h" />
-    <ClInclude Include="vendor\DirectXHelpers.h" />
-    <ClInclude Include="vendor\Effects.h" />
     <ClInclude Include="vendor\entt\entt.hpp" />
-    <ClInclude Include="vendor\GamePad.h" />
-    <ClInclude Include="vendor\GeometricPrimitive.h" />
-    <ClInclude Include="vendor\GraphicsMemory.h" />
     <ClInclude Include="vendor\ImGuizmo\GraphEditor.h" />
     <ClInclude Include="vendor\ImGuizmo\ImCurveEdit.h" />
     <ClInclude Include="vendor\ImGuizmo\ImGradient.h" />
@@ -242,19 +238,9 @@
     <ClInclude Include="vendor\ImGui\imstb_rectpack.h" />
     <ClInclude Include="vendor\ImGui\imstb_textedit.h" />
     <ClInclude Include="vendor\ImGui\imstb_truetype.h" />
-    <ClInclude Include="vendor\Keyboard.h" />
-    <ClInclude Include="vendor\Model.h" />
-    <ClInclude Include="vendor\Mouse.h" />
-    <ClInclude Include="vendor\PostProcess.h" />
-    <ClInclude Include="vendor\PrimitiveBatch.h" />
-    <ClInclude Include="vendor\ScreenGrab.h" />
-    <ClInclude Include="vendor\SimpleMath.h" />
-    <ClInclude Include="vendor\SpriteBatch.h" />
-    <ClInclude Include="vendor\SpriteFont.h" />
+    <ClInclude Include="vendor\DirectXTK\Inc\SimpleMath.h" />
     <ClInclude Include="vendor\stb_image.h" />
-    <ClInclude Include="vendor\VertexTypes.h" />
     <ClInclude Include="vendor\WICTextureLoader.h" />
-    <ClInclude Include="vendor\XboxDDSTextureLoader.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Engine\Assets\Shaders\LightShader.hlsl">
@@ -296,7 +282,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
     </FxCompile>
-    <None Include="vendor\SimpleMath.inl" />
+    <None Include="vendor\DirectXTK\Inc\SimpleMath.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
