OS window resize fix

--- a/GameEngine/imgui.ini
+++ b/GameEngine/imgui.ini
@@ -4,25 +4,24 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1017,0
-Size=263,720
+Pos=1465,0
+Size=455,787
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x00000005,0
 
 [Window][DockSpace Demo]
-Pos=0,19
-Size=1280,701
+Size=1264,761
 Collapsed=0
 
 [Window][Viewport]
-Pos=299,0
-Size=716,419
+Pos=305,0
+Size=1158,787
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x00000008,0
 
 [Window][Hierarchy]
 Pos=0,0
-Size=297,363
+Size=303,787
 Collapsed=0
 DockId=0x00000007,0
 
@@ -34,7 +33,7 @@ Collapsed=0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,0
-Size=1280,720
+Size=1920,1017
 Collapsed=0
 
 [Window][Title bar Hovered/Active tests]
@@ -43,16 +42,31 @@ Size=472,61
 Collapsed=0
 
 [Window][Content Browser]
-Pos=299,421
-Size=716,299
+Pos=455,789
+Size=1465,228
 Collapsed=0
-DockId=0x00000004,0
+DockId=0x00000006,0
 
 [Window][Properties]
-Pos=0,365
-Size=297,355
+Pos=0,789
+Size=453,228
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000003,0
+
+[Window][Example: Auto-resizing window]
+Pos=328,226
+Size=718,207
+Collapsed=0
+
+[Window][Example: Constrained Resize]
+Pos=518,0
+Size=504,720
+Collapsed=0
+
+[Window][Hello, world!]
+Pos=57,139
+Size=339,180
+Collapsed=0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -132,13 +146,13 @@ Column 5  Width=112
 Column 6  Width=112
 
 [Docking][Data]
-DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=328,211 Size=1280,720 Split=X
-  DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=1015,720 Split=X
-    DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=297,720 Split=Y Selected=0x29EABFBD
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=199,363 Selected=0x29EABFBD
-      DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=199,355 Selected=0x199AB496
-    DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=716,720 Split=Y Selected=0x13926F0B
-      DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=488,419 CentralNode=1 Selected=0x13926F0B
-      DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=488,299 Selected=0xBF096F38
-  DockNode      ID=0x00000006 Parent=0x8B93E3BD SizeRef=263,720 Selected=0xE87781F4
+DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,23 Size=1920,1017 Split=Y
+  DockNode      ID=0x00000001 Parent=0x8B93E3BD SizeRef=1280,787 Split=X
+    DockNode    ID=0x00000004 Parent=0x00000001 SizeRef=1463,720 Split=X
+      DockNode  ID=0x00000007 Parent=0x00000004 SizeRef=303,720 Selected=0x29EABFBD
+      DockNode  ID=0x00000008 Parent=0x00000004 SizeRef=1158,720 CentralNode=1 Selected=0x13926F0B
+    DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=455,720 Selected=0xE87781F4
+  DockNode      ID=0x00000002 Parent=0x8B93E3BD SizeRef=1280,228 Split=X Selected=0xBF096F38
+    DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=302,358 Selected=0x199AB496
+    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=976,358 Selected=0xBF096F38
 
